[package]
name = "oblivious_transfer"
version = "0.1.0"
authors = ["Adrian Antkowiak <adiantek@gmail.com>"]
edition = "2021"
rust-version = "1.77"

[dependencies]
libaes = "0.7.0"
sha2 = "0.10.8"
p256 = "0.13.2"
rand = "0.8.5"
eframe = "0.27.1"
hex = "0.4.3"
tokio = { version = "1.37", features = ["rt", "macros", "net", "time", "sync"] }
local-ip-address = "0.6.1"
network-interface = "1.1.2"
thiserror = "1.0"